14/03/24 ultima version del Genesis hasta donde trabaje con mi propia idea. a partir de esta fecha trabajaremos bajo la estructura del proyecto dado por el Profesor Gregorio. Muchas gracias. Cambios implementados hasta aqui: * Validacion de usuario y permisos * Manejo de JTables en cada vista Registro. Pero esto vamos a cambiar. A partir de ahora las vistas Registros no tendran sus propias JTables sino que existira una ventana w_buscar que mostrara los registros y este sera utilizado por todas las ventanas Registros y mas. * Vamos a eliminar el controlador AuthController, esto debido a que la funcion iniciar sesion solamente se utiliza en LOGIN por lo que no es necesario llevarlo al controlador, y luego la funcion de validarPermisos para mostrar menus solo lo utilizamos en la ventana Principal, y luego la funcion validarPermiso para las ventanas internas lo llevamos a Tools porque solo es una funcion y la vamos a tener en Tools con las demas funciones de ayuda, para no tener una funcion AuthController solo con una funcion. * Los datos de sesion del usuario vamos a mantenerlos en conexion.

--- a/genesis.properties
+++ b/genesis.properties
@@ -8,10 +8,10 @@ driver=com.mysql.cj.jdbc.Driver
 #mysql-connector-java-8.0.26
 #mysql-connector-java
 #com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/paronline?zeroDateTimeBehavior=CONVERT_TO_NULL
+url=jdbc:mysql://localhost:3306/db_genesis?zeroDateTimeBehavior=CONVERT_TO_NULL
 #http://localhost/fenix_project
 usuario=root
 contrasena=pepitoperez95
 puerto=3306
-dbname=paronline
+dbname=db_genesis
 caja=1
