Vistas trabajadas: * localidades: departamento, ciudad * Almacenamiento: Depósito, Producto, ProductoDetalle, Stock. Modelos: * POJO AjusteDetalle * POJO ProductoDetalle * CompraDetalle Modificando Vistas. Preparando Estructura para trabajar con los reportes.

--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,52 @@
         <exec.mainClass>com.genesis.Main</exec.mainClass>
     </properties>
     <dependencies>
+        <!--Conectores a base de datos-->
+        <!--Driver Controlador de MySQL-->
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
+        <!--Driver Controlador de PostgreSQL-->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.5.2</version>
         </dependency>
+        
+        <!--JCalendar-->
+        <!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+        
+        <!--Jasper Reports-->
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.21.2</version>
+        </dependency>
+        <!--Jasper Reports Fonts-->
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-fonts -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-fonts</artifactId>
+            <version>6.21.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-javaflow -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-javaflow</artifactId>
+            <version>6.21.2</version>
+        </dependency>
+
+
+
+
     </dependencies>
 </project>
