--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>jasperreports-javaflow</artifactId>
             <version>6.21.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.9</version>
+        </dependency>
 
 
 
